--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,14 @@
     <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3 col-sm-12">
-                    <h1 class="text-center">
-                        Socket IO Chat 
-                    </h1>
+                    <h1 class="text-center">Socket IO Chat</h1>
+                    <br>
                     <div id="status"></div>
                     <div id="chat">
                         <input type="text" id="username" class="form-control" placeholder="Enter name...">
                         <br>
                         <div class="card">
-                            <div id="messages" class="card-block">
-    
-                            </div>
+                            <div id="messages" class="card-block"></div>
                         </div>
                         <br>
                         <textarea id="textarea" class="form-control" placeholder="Enter message..."></textarea>
