Basic cypress e2e testing

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
                     <br>
                     <div id="status"></div>
                     <div id="chat">
-                        <input type="text" id="username" class="form-control" placeholder="Enter name...">
+                        <input type="text" name="username" id="username" class="form-control" placeholder="Enter name...">
                         <br>
                         <div class="card">
                             <div id="messages" class="card-block"></div>
                         </div>
                         <br>
-                        <textarea id="textarea" class="form-control" placeholder="Enter message..."></textarea>
+                        <textarea id="textarea" name="inputMessage" class="form-control" placeholder="Enter message..."></textarea>
                         <br>
                         <button id="send" class="btn">Send</button>
                     </div>
